pbc_contract_codegen/tests/action/fail/zk/arg_instead_of_zk_state_action.stderr
error[E0308]: mismatched types
 --> tests/action/fail/zk/arg_instead_of_zk_state_action.rs:5:1
  |
5 | #[action]
  | ^^^^^^^^^
  | |
  | expected struct `ZkState`, found `u32`
  | expected due to this
  |
  = note: expected struct `ZkState<_>`
               found type `u32`
  = note: this error originates in the attribute macro `action` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/action/fail/zk/arg_instead_of_zk_state_action.rs:5:1
  |
5 | #[action]
  | ^^^^^^^^^ expected `u32`, found struct `ZkState`
  |
  = note: expected type `u32`
           found struct `ZkState<_>`
  = note: this error originates in the attribute macro `action` (in Nightly builds, run with -Z macro-backtrace for more info)
